force-app/main/default/objects/Duplicate_Store__c/Duplicate_Store__c.object-meta.xml
<CustomObject>
    <label>Duplicate Store</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Duplicate Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Store</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>