force-app/main/default/objects/Duplicate_Store__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Duplicate Store</relationshipLabel>
    <relationshipName>Duplicate_Store</relationshipName>
    <type>Lookup</type>
</CustomField>